# reportgen-system-web

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  dev.sh  pnpm-lock.yaml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 47063a03df94_add_unique_username_constraint.py  58b49a92a673_add_parse_timeline.py  778ea963c5a5_add_missing_fk_and_audit_columns.py  89eeddb85afe_add_project_visibility.py  a1b2c3d4e5f6_add_file_path_to_raw_files.py  b7c8d9e0f1a2_add_section_to_extracted_fields.py  c4d5e6f7a8b9_add_parse_run_metadata_to_raw_files.py  d5e6f7a8b9c0_add_file_path_to_report_deliveries.py  dc0e8d4bcb7c_init_18_tables.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  logging.py  security.py
backend/app/models/: __init__.py  deleted_project.py  extracted_field.py  operation_log.py  parse_event.py  parse_timeline.py  project.py  project_metric.py  raw_file.py  report_delivery.py  report_section.py  report_section_meta.py  report_version.py  rule_field.py  rule_template.py  rule_template_version.py  system_message.py  user.py  user_preference.py
backend/app/repositories/: __init__.py  base.py  operation_log_repo.py  project_repo.py  raw_file_repo.py  report_delivery_repo.py  report_section_repo.py  report_version_repo.py  rule_field_repo.py  rule_template_repo.py  (+4 more)
backend/docs/: Core API 接口说明.md  后端开发规范.md  后端需求说明.md  开发流程.md  技术栈说明.md  生产数据库设计.md
backend/scripts/: seed_from_json.py
backend/tests/: conftest.py  test_core_api.py  test_gen_report_service.py  test_health.py
(+103 files in other folders)
