[project]
name = "inspection-report-core-api"
version = "0.1.0"
description = "Core API service for the intelligent inspection report generation system."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "celery>=5.4,<6.0",
  "fastapi>=0.115,<1.0",
  "minio>=7.2,<8.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.6,<3.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "python-multipart>=0.0.12,<1.0",
  "redis>=5.2,<6.0",
  "sqlalchemy>=2.0,<3.0",
  "structlog>=24.4,<25.0",
  "uvicorn[standard]>=0.32,<1.0"
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.8,<1.0"
]

[project.scripts]
core-api = "app.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/versions/", "scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
